# rmat-graph-gen

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
benches/: bench_generator.rs
cpp_impl/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example
cpp_impl/include/: generator.h
cpp_impl/src/: generator.cpp  main.cpp
cpp_impl/tests/: CMakeLists.txt  bench.cpp  test.cpp
src/: builder.h  command_line.h  generator.rs  main.rs  rmat-gen.cc
